// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`an admin account should not be able to change the slug of a default group if is doesn't match 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "FORBIDDEN",
      "exception": Object {
        "details": Object {},
        "error": "access-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Field 'slug' cannot be updated for default group with ID (shopManagerGroup) and name (shopManager).",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Field 'slug' cannot be updated for default group with ID (shopManagerGroup) and name (shopManager).",
    "path": Array [
      "updateAccountGroup",
      "group",
    ],
  },
]
`;

exports[`an admin account should not be able to change the slug of a default group if is doesn't match 2`] = `
Array [
  Object {
    "extensions": Object {
      "code": "FORBIDDEN",
      "exception": Object {
        "details": Object {},
        "error": "access-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Field 'slug' cannot be updated for default group with ID (ownerGroup) and name (ownerGroup).",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Field 'slug' cannot be updated for default group with ID (ownerGroup) and name (ownerGroup).",
    "path": Array [
      "updateAccountGroup",
      "group",
    ],
  },
]
`;
